src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Billing_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Barangay__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Barangay</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference__c.Field__c</field>
                <operation>equals</operation>
                <value>Barangay</value>
            </filterItems>
            <filterItems>
                <field>Reference__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.Address_City_Municipality__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Addresses (Barangay)</relationshipLabel>
        <relationshipName>Addresses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_City_Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City / Municipality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference__c.Field__c</field>
                <operation>equals</operation>
                <value>City</value>
            </filterItems>
            <filterItems>
                <field>Reference__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.Address_Province__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Addresses (City / Municipality)</relationshipLabel>
        <relationshipName>Addresses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Province__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Province</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference__c.Field__c</field>
                <operation>equals</operation>
                <value>Province</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Street_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Street Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference__c.Field__c</field>
                <operation>equals</operation>
                <value>Street</value>
            </filterItems>
            <filterItems>
                <field>Reference__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.Address_Subdivision__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Addresses (Street Name)</relationshipLabel>
        <relationshipName>Addresses4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Street_No__c</fullName>
        <label>Street #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Subdivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subdivision / Bldg</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Reference__c.Field__c</field>
                <operation>equals</operation>
                <value>Subdivision</value>
            </filterItems>
            <filterItems>
                <field>Reference__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.Address_Barangay__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Addresses (Subdivision)</relationshipLabel>
        <relationshipName>Addresses3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Unit_No__c</fullName>
        <label>Unit #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Address_Unit_No__c &amp; &quot; &quot; &amp;  Address_Street_No__c &amp; &quot; &quot; &amp; Address_Street_Name__r.Name &amp; &quot;, &quot; &amp; Address_Subdivision__r.Name &amp; &quot; &quot; &amp;  Address_Barangay__r.Name &amp; &quot;, &quot; &amp; Address_City_Municipality__r.Name &amp; &quot;, &quot; &amp;  Address_Province__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Billing_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Address_Barangay__c</fullName>
        <label>Code Barangay</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Address_City_Municipality__c</fullName>
        <label>Code City / Municipality</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Address_Province__c</fullName>
        <label>Code Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Address_Street_Name__c</fullName>
        <label>Code Street Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Address_Subdivision__c</fullName>
        <label>Code Subdivision</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Premises_Type__c</fullName>
        <label>Code Premises Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection</label>
        <referenceTo>Connection__c</referenceTo>
        <relationshipName>Billing_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Billing_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Integ_V10_Create_Status_Datetime__c</fullName>
        <label>V10 Create Status Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integ_V10_Create_Status_Description__c</fullName>
        <label>V10 Create Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integ_V10_Create_Status__c</fullName>
        <label>V10 Create Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integ_V10_Outbound_Message_Send_Date__c</fullName>
        <label>V10 Outbound Message Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integ_V10_Retrigger_time_5min__c</fullName>
        <formula>Integ_V10_Create_Status_Datetime__c - 0.038</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>V10 Retrigger time 5min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Landmarks_Directions__c</fullName>
        <label>Landmarks Directions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Type__c</fullName>
        <label>Premises Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Cemetery</fullName>
                </value>
                <value>
                    <fullName>Commercial Building</fullName>
                </value>
                <value>
                    <fullName>Compound Residential</fullName>
                </value>
                <value>
                    <fullName>Government Building</fullName>
                </value>
                <value>
                    <fullName>Groups of Industry</fullName>
                </value>
                <value>
                    <fullName>High-rise Building</fullName>
                </value>
                <value>
                    <fullName>Meralco Use Substation</fullName>
                </value>
                <value>
                    <fullName>Offices</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pole</fullName>
                </value>
                <value>
                    <fullName>Single Commercial</fullName>
                </value>
                <value>
                    <fullName>Single-Detached Residential</fullName>
                </value>
                <value>
                    <fullName>Single Industry</fullName>
                </value>
                <value>
                    <fullName>Streetlights</fullName>
                </value>
                <value>
                    <fullName>Telecom Cabinet</fullName>
                </value>
                <value>
                    <fullName>Traffic Lights</fullName>
                </value>
                <value>
                    <fullName>Condominium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipName>Billing_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Address__c</columns>
        <columns>Account__c</columns>
        <columns>Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADD-{000000}</displayFormat>
        <label>Address Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CXE_Require_Premise_Type</fullName>
        <active>true</active>
        <description>Require Premise Type if address is service</description>
        <errorConditionFormula>AND ( ISPICKVAL(Type__c , &quot;Service&quot;), ISBLANK( TEXT(Premise_Type__c))
,$User.By_Pass_Validation__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Premise_Type__c</errorDisplayField>
        <errorMessage>You must select Premise Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Address_Type</fullName>
        <active>false</active>
        <description>Validate Type based on lookup values.
1. Account and Case, no validation
2. Contact, Type = Customer
3. Contract, Type = Billing
4. Service, Type = Service
5. Connection, Type = Meter</description>
        <errorConditionFormula>IF(
   OR(
      AND(NOT(ISBLANK(Contact__c)), NOT(ISPICKVAL(Type__c, &apos;Customer&apos;))), 
      AND(NOT(ISBLANK(Contract__c)), NOT(ISPICKVAL(Type__c, &apos;Billing&apos;))), 
      AND(NOT(ISBLANK(Service__c)), NOT(ISPICKVAL(Type__c, &apos;Service&apos;))), 
	  AND(NOT(ISBLANK(Connection__c)), NOT(ISPICKVAL(Type__c, &apos;Meter&apos;)))
   ), 
   true, 
   false
)</errorConditionFormula>
        <errorMessage>Type invalid, Contact Address should be Customer, Contract Address should be Billing, Service Address should be Service and Connection Address should be Meter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Connection_Address_Type</fullName>
        <active>true</active>
        <description>Validate Type based on lookup values.
1. Account and Case, no validation
2. Contact, Type = Customer
3. Contract, Type = Billing
4. Service, Type = Service
5. Connection, Type = Meter</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Connection__c)), NOT(ISPICKVAL(Type__c, &apos;Meter&apos;)))</errorConditionFormula>
        <errorMessage>Invalid Type, Connection Address should be Meter.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Contact_Address_Type</fullName>
        <active>true</active>
        <description>Validate Type based on lookup values.
1. Account and Case, no validation
2. Contact, Type = Customer
3. Contract, Type = Billing
4. Service, Type = Service
5. Connection, Type = Meter</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Contact__c)), NOT(ISPICKVAL(Type__c, &apos;Customer&apos;)))</errorConditionFormula>
        <errorMessage>Invalid Type, Contact Address should be Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Contract_Address_Type</fullName>
        <active>true</active>
        <description>Validate Type based on lookup values.
1. Account and Case, no validation
2. Contact, Type = Customer
3. Contract, Type = Billing
4. Service, Type = Service
5. Connection, Type = Meter</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Contract__c)), NOT(ISPICKVAL(Type__c, &apos;Billing&apos;)))</errorConditionFormula>
        <errorMessage>Invalid Type, Contract Address should be Billing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Service_Address_Type</fullName>
        <active>true</active>
        <description>Validate Type based on lookup values.
1. Account and Case, no validation
2. Contact, Type = Customer
3. Contract, Type = Billing
4. Service, Type = Service
5. Connection, Type = Meter</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Service__c)), NOT(ISPICKVAL(Type__c, &apos;Service&apos;)))</errorConditionFormula>
        <errorMessage>Invalid Type, Service Address should be Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Street_Number</fullName>
        <active>false</active>
        <description>Street number is required for service, billing and customer type of address</description>
        <errorConditionFormula>AND(ISBLANK(Address_Street_No__c), OR(ISPICKVAL(Type__c, &apos;Billing&apos;), ISPICKVAL(Type__c, &apos;Service&apos;), ISPICKVAL(Type__c, &apos;Customer&apos;)))</errorConditionFormula>
        <errorDisplayField>Address_Street_No__c</errorDisplayField>
        <errorMessage>You must enter a Street #</errorMessage>
    </validationRules>
</CustomObject>